	* Added an invocation to AR_GCC_TARGET() in 'configure.ac'.
2016-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Corrected dependency in 'rivwebcapi.spec.in'.
2016-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Added '-lcurl' to the 'libs:' field in 'rivendell.pc.in'.
2016-11-04 Todd Baker <bakert@rfa.org>
        * Fixed fprintf typo in all *.c files in Erreor Code Display.
	  Added CURLOPT_ERRORBUFFER to Error Output for Text version of
	  Curl Lib errors. Updated Originator.
2016-11-28 Todd Baker <bakert@rfa.org>
	* Added New parameters for rd_import.c. This allows for Cart Creation
          if it doesn't exist. Includes create flag and group name. Updated Docbook entry.
          Also updated importcart_test to include this functionality. Updated
	  Originator.
2017-01-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a fencepost error in 'rivendell/rd_listlog.c' that caused
	the last character of the log name to be truncated when calling
	rd_listlog().
2017-01-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'rivendell/rd_listlog.c' that used the incorrect
	keyword for detecting audio carts when calling rd_listlog().
2017-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Moved the '-lcurl' invocation to the end of the 'LDADD' entries
	in 'tests/Makefile.am' to fix linker errors under MingW32.
	* Fixed a bug in 'rivendell/rd_listlog.c' that caused the event type
	to be set to 'Marker' for all hard-timed events when calling
	rd_listlog().
2017-01-17 Todd Baker (bakert@rfa.org>
	* Made changes to the rd_import code.  The successful completion of
	  import returns the Cart number and Cut Number.
2017-01-17 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up debugging printf()s from 'rivendell/rd_listlog.c'.
2017-01-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a test in 'configure.ac' for MingW32.
	* Added a test in 'rivendell/rd_common.h' to avoid breaking the
	build under MingW32.